tests/functional/lang/eval-fail-undeclared-arg.err.exp

       … from call site
         at /pwd/lang/eval-fail-undeclared-arg.nix:1:1:
            1| ({ x, z }: x + z) {
             | ^
            2|   x = "foo";



       at /pwd/lang/eval-fail-undeclared-arg.nix:1:2:
            1| ({ x, z }: x + z) {
             |  ^
            2|   x = "foo";

       error: function 'anonymous lambda' called with unexpected argument 'y'

       Did you mean one of x or z?
